--- a/project-temple/package.json
+++ b/project-temple/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
+    "date-fns": "^2.30.0",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
